--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,10 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 theme: minima
+url: "https://matteo.ugolini.dev"
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
